[workspace]
resolver = "2"
members = [
    "dummy",
    "player",
    "wgpu",
    "wgpu-core",
    "wgpu-hal",
    "wgpu-types",
]
default-members = ["wgpu", "player", "wgpu-hal"]

[patch."https://github.com/gfx-rs/naga"]
#naga = { path = "../naga" }

[patch."https://github.com/zakarumych/gpu-descriptor"]
#gpu-descriptor = { path = "../gpu-descriptor/gpu-descriptor" }

[patch."https://github.com/zakarumych/gpu-alloc"]
#gpu-alloc = { path = "../gpu-alloc/gpu-alloc" }

[patch.crates-io]
#web-sys = { path = "../wasm-bindgen/crates/web-sys" }
#js-sys = { path = "../wasm-bindgen/crates/js-sys" }
#wasm-bindgen = { path = "../wasm-bindgen" }

[patch."https://github.com/gfx-rs/gfx"]
gfx-backend-metal = { git = "https://github.com/CurryPseudo/gfx", branch="metal-cap" }
gfx-hal = { git = "https://github.com/CurryPseudo/gfx", branch="metal-cap" }